--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <button id="close-menu" class="close-menu" aria-label="Close menu" type="button">&times;</button>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About Me</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#posts">Blog Posts</a></li>
             <li><a href="#projects">Projects</a></li>
@@ -81,10 +81,11 @@
         </section>
 
         <section id="about">
-            <h2>About Me</h2>
+            <h2>About</h2>
             <p>
-                Hi, I'm Gary Andreas, a student of Informatics Engineering major.
-                This blog is where I share my thoughts and stories.
+                Website ini dibuat menggunakan bahasa pemrograman HTML, CSS, dan JavaScript.
+                Tujuan dari website ini adalah untuk memberikan informasi tentang diri saya dan juga untuk memenuhi tugas mata kuliah Sistem Multimedia.
+                Website ini juga dilengkapi dengan beberapa fitur seperti galeri foto, video, dan audio.
             </p>
         </section>
 
@@ -538,14 +539,129 @@
                     <small>Posted on: April 19, 2025</small>
                 </article>
 
-                <article>
-                    <h3>Animation Content</h3>
-                    <div class="animation-container post-media">
-                        <div class="animated-element"></div>
+                <article class="text-samples">
+                    <h3>Contoh Animasi Populer</h3>
+                    <p>Berikut 10 jenis animasi beserta penjelasan dan contohnya: </p>
+                    
+                    <div class="fonts-grid">
+                        <div class="font-sample traditional">
+                            <h4>2D Traditional Animation</h4>
+                            <video controls class="video-preview">
+                                <source src="Animations/beautyandthebeast.mp4" type="video/mp4">
+                                Your browser does not support the video element.
+                            </video>
+                            <p>Contoh: "Beauty and the Beast" (1991) 
+                                Menggunakan teknik lukisan tangan, animasi ini menunjukkan keindahan visual 
+                                dan detail artistik khas era klasik animasi. </p>
+                        </div>
+
+                        <div class="font-sample cgi">
+                            <h4>3D CGI Animation</h4>
+                            <video controls class="video-preview">
+                                <source src="Animations/shrek.mp4" type="video/mp4">
+                                Your browser does not support the video element.
+                            </video>
+                            <p>Contoh: "Shrek" (2001) 
+                                Inovasi teknologi komputer menghasilkan karakter dan lingkungan tiga dimensi 
+                                yang hidup, dengan efek cahaya dan bayangan yang mendukung narasi humoris.</p>
+                        </div>
+
+                        <div class="font-sample stopmotion">
+                            <h4>Stop-Motion Animation</h4>
+                            <video controls class="video-preview">
+                                <source src="Animations/kubo.mp4" type="video/mp4">
+                                Your browser does not support the video element.
+                            </video>
+                            <p>Contoh: "Kubo and the Two Strings" (2016) 
+                                Menggabungkan objek fisik dengan teknik pemotretan berurutan, animasi ini 
+                                menghadirkan keajaiban melalui gerakan yang dihasilkan secara manual. </p>
+                        </div>
+
+                        <div class="font-sample claymation">
+                            <h4>Claymation</h4>
+                            <video controls class="video-preview">
+                                <source src="Animations/gumby.mp4" type="video/mp4">
+                                Your browser does not support the video element.
+                            </video>
+                            <p>Contoh: "Gumby: The Movie" 
+                                Dengan memanfaatkan model tanah liat yang dibentuk secara artisanal, animasi 
+                                jenis ini menunjukkan tekstur dan keunikan karakter yang tidak dapat direplikasi 
+                                secara digital. </p>
+                        </div>
+
+                        <div class="font-sample cutout">
+                            <h4>Cut-Out Animation</h4>
+                            <video controls class="video-preview">
+                                <source src="Animations/achmed.mp4" type="video/mp4">
+                                Your browser does not support the video element.
+                            </video>
+                            <p>Contoh: "The Adventures of Prince Achmed" (1926) 
+                                Teknik ini menggunakan potongan gambar siluet yang diatur secara sekuensial, 
+                                menghasilkan gaya visual yang artistik dan unik sejak era awal animasi. </p>
+                        </div>
+
+                        <div class="font-sample motiongraphics">
+                            <h4>Motion Graphics Animation</h4>
+                            <video controls class="video-preview">
+                                <source src="Animations/infographic.mp4" type="video/mp4">
+                                Your browser does not support the video element.
+                            </video>
+                            <p>Contoh: "The Infographics Show" 
+                                Mengombinasikan elemen grafis, tipografi, dan animasi dinamis untuk 
+                                menyampaikan informasi kompleks dengan cara yang menarik dan mudah 
+                                dicerna.</p>
+                        </div>
+
+                        <div class="font-sample anime">
+                            <h4>Anime</h4>
+                            <video controls class="video-preview">
+                                <source src="Animations/akira.mp4" type="video/mp4">
+                                Your browser does not support the video element.
+                            </video>
+                            <p>Contoh: "Akira" (1988) 
+                                Sebuah karya revolusioner dari Jepang yang menggabungkan cerita futuristik 
+                                dengan gaya visual khas anime yang intens dan dinamis.</p>
+                        </div>
+
+                        <div class="font-sample rotoscoping">
+                            <h4>Rotoscoping Animation</h4>
+                            <video controls class="video-preview">
+                                <source src="Animations/wakinglife.mp4" type="video/mp4">
+                                Your browser does not support the video element.
+                            </video>
+                            <p>Contoh: "Waking Life" (2001) 
+                                Teknik ini melibatkan penelusuran gerakan dari footage asli, menghasilkan efek 
+                                visual yang mengaburkan batas antara realitas dan animasi gambaran tangan.</p>
+                        </div>
+
+                        <div class="font-sample experimental">
+                            <h4>Experimental Animation</h4>
+                            <video controls class="video-preview">
+                                <source src="Animations/meshes.mp4" type="video/mp4">
+                                Your browser does not support the video element.
+                            </video>
+                            <p>Contoh: "Meshes of the Afternoon" (1943) 
+                                Pendekatan eksperimental ini mengeksplorasi bentuk-bentuk abstrak dan narasi 
+                                non-linier, menekankan penciptaan atmosfer dan emosi melalui manipulasi 
+                                visual.</p>
+                        </div>
+
+                        <div class="font-sample mixedmedia">
+                            <h4>Mixed Media Animation</h4>
+                            <video controls class="video-preview">
+                                <source src="Animations/sita.mp4" type="video/mp4">
+                                Your browser does not support the video element.
+                            </video>
+                            <p>Contoh: "Sita Sings the Blues" (2008) 
+                                Karya yang menggabungkan berbagai teknik—mulai dari animasi tradisional, 
+                                digital, hingga elemen live-action—untuk menciptakan pengalaman visual yang 
+                                multidimensional dan inovatif.</p>
+                        </div>
                     </div>
-                    <p>Showcasing CSS animation capabilities.</p>
-                    <small>Posted on: March 5, 2024</small>
+
+                    <small>Posted on: April 19, 2025</small>
                 </article>
+
             </div>
         </section>
 
@@ -554,7 +670,7 @@
             <div class="projects-container">
                 <div class="project-card">
                     <h3>UTS Sistem Multimedia</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>Berikut adalah makalah untuk memenuhi tugas Ujian Tengah Semester dari mata kuliah Sistem Multimedia</p>
                     <iframe 
                         src="UTS/LAPORAN UTS SISTEM MULTIMEDIA.pdf"
                         class="pdf-viewer"
