--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <button id="close-menu" class="close-menu" aria-label="Close menu" type="button">&times;</button>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
+            <li><a href="#about">About Me</a></li>
+            <li><a href="#skills">Komposisi</a></li>
             <li><a href="#posts">Blog Posts</a></li>
             <li><a href="#projects">Projects</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -82,7 +82,7 @@
 
         <section id="about">
             <h2>About</h2>
-            <p>
+            <p style="font-size: 1.2rem; line-height: 1.8;">
                 Website ini dibuat menggunakan bahasa pemrograman HTML, CSS, dan JavaScript.
                 Tujuan dari website ini adalah untuk memberikan informasi tentang diri saya dan juga untuk memenuhi tugas mata kuliah Sistem Multimedia.
                 Website ini juga dilengkapi dengan beberapa fitur seperti galeri foto, video, dan audio.
@@ -90,24 +90,24 @@
         </section>
 
         <section id="skills">
-            <h2>Skills</h2>
+            <h2>Komposisi</h2>
             <div class="skills-container">
                 <div class="skill">
-                    <h3>Programming</h3>
+                    <h3>HTML</h3>
                     <div class="progress-bar">
-                        <div class="progress" style="width: 30%"></div>
+                        <div class="progress" style="width: 45%"></div>
                     </div>
                 </div>
                 <div class="skill">
-                    <h3>English</h3>
+                    <h3>CSS</h3>
                     <div class="progress-bar">
-                        <div class="progress" style="width: 40%"></div>
+                        <div class="progress" style="width: 35%"></div>
                     </div>
                 </div>
                 <div class="skill">
-                    <h3>Public Speaking</h3>
+                    <h3>JavaScript</h3>
                     <div class="progress-bar">
-                        <div class="progress" style="width: 65%"></div>
+                        <div class="progress" style="width: 20%"></div>
                     </div>
                 </div>
             </div>
