--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preload" href="style.css" as="style">
     <link rel="stylesheet" href="style.css" media="all" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Open+Sans:wght@400;700&family=Lato:wght@400;700&family=Montserrat:wght@400;700&family=Raleway:wght@400;700&family=Merriweather:wght@400;700&family=PT+Sans:wght@400;700&family=Source+Sans+Pro:wght@400;700&family=Oswald:wght@400;700&family=Ubuntu:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
         .loading {
             text-align: center;
@@ -683,19 +684,24 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <form id="contactForm">
-                <label for="contactName">Name:</label>
-                <input type="text" id="contactName" name="contactName" required />
-
-                <label for="contactEmail">Email:</label>
-                <input type="email" id="contactEmail" name="contactEmail" required />
-
-                <label for="contactMessage">Message:</label>
-                <textarea id="contactMessage" name="contactMessage" required></textarea>
-
-                <button type="submit">Send</button>
-            </form>
-            <p>You can also reach me at: garyandreas0804@gmail.com</p>
+            <div class="contact-links">
+                <a href="mailto:garyandreas0804@gmail.com" class="contact-item">
+                    <i class="fas fa-envelope"></i>
+                    <span>garyandreas0804@gmail.com</span>
+                </a>
+                <a href="https://www.instagram.com/gr_andrs" target="_blank" class="contact-item">
+                    <i class="fab fa-instagram"></i>
+                    <span>@gr_andrs</span>
+                </a>
+                <a href="https://www.linkedin.com/in/garyandreas/" target="_blank" class="contact-item">
+                    <i class="fab fa-linkedin"></i>
+                    <span>Gary Andreas</span>
+                </a>
+                <a href="tel:+6282170743014" class="contact-item">
+                    <i class="fas fa-phone"></i>
+                    <span>+62 821-7074-3014</span>
+                </a>
+            </div>
         </section>
     </div>
 </main>
