--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
                             <p>Dirancang khusus untuk komunikasi suara pada perangkat mobile, AMR 
                                 menyajikan kompresi optimal dengan bitrate rendah (sekitar 4,75–12,2 kbps) dan 
                                 frekuensi sampling 8 kHz, sehingga ideal untuk rekaman percakapan.
-                               <a href="Audio/original.amr" class="format-link">Download AMR Version</a></p>
+                               <a href="Audio/amr.amr" class="format-link">Download AMR Version</a></p>
                         </div>
 
                         <div class="font-sample ac3">
@@ -436,7 +436,7 @@
                             <p>Format ini umum digunakan dalam sinema dan DVD, mendukung audio 
                                 multichannel (5.1 channel) dengan bitrate variabel untuk menghadirkan 
                                 pengalaman sinematik yang imersif.
-                               <a href="Audio/original.ac3" class="format-link">Download AC-3 Version</a></p>
+                               <a href="Audio/ac3.ac3" class="format-link">Download AC-3 Version</a></p>
                         </div>
 
                         <div class="font-sample atrac3">
@@ -447,7 +447,7 @@
                             </audio>
                             <p>Diciptakan oleh Sony, ATRAC3 menawarkan kualitas audio yang baik pada ukuran 
                                 file yang lebih kecil melalui teknik kompresi yang canggih, banyak digunakan 
-                                dalam perangkat pemutar musik digital. <a href="Audio/original.at3" class="format-link">Download ATRAC3 Version</a></p>
+                                dalam perangkat pemutar musik digital. </p>
                         </div>
 
                         <div class="font-sample mp2">
@@ -459,7 +459,7 @@
                             <p>Sering dipakai dalam penyiaran radio digital, MP2 menawarkan kompresi yang 
                                 stabil dan efisiensi tinggi dalam distribusi audio, meskipun kini telah digantikan 
                                 oleh format yang lebih baru di beberapa aplikasi.
-                                <a href="Audio/original.mp2" class="format-link">Download MP2 Version</a></p>
+                                <a href="Audio/mp2.mp2" class="format-link">Download MP2 Version</a></p>
                         </div>
 
                         <div class="font-sample pcm">
@@ -471,7 +471,7 @@
                             <p>Merupakan format audio mentah tanpa kompresi, PCM menyajikan data digital 
                                 yang identik dengan sinyal analog asli, seperti yang digunakan dalam sistem CD 
                                 audio (biasanya 16-bit, 44,1 kHz).
-                                <a href="Audio/original.pcm" class="format-link">Download PCM Version</a></p>
+                                <a href="Audio/pcm.pcm" class="format-link">Download PCM Version</a></p>
                         </div>
 
                         <div class="font-sample realaudio">
